--- a/src/component/pageContent/pageContent.module.scss
+++ b/src/component/pageContent/pageContent.module.scss
@@ -1,7 +1,8 @@
 .content_wrapper {
   display: grid;
   grid-template-columns: repeat(5, 140px);
-  gap: 28px;
+  column-gap: 28px;
+  row-gap: 44px;
   margin: 0 auto;
   max-width: 840px;
 }
