--- a/src/layout/rootLayout.module.scss
+++ b/src/layout/rootLayout.module.scss
@@ -6,10 +6,52 @@
 }
 
 nav {
-  outline: solid red 2px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   margin-bottom: 30px;
   @include center-div(840px);
+}
+
+.navigation {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+
+  .search_wrapper {
+    border-radius: 50px;
+    padding: 9px 15px;
+    border: none;
+    width: 220px;
+    background-color: rgb(61, 61, 61);
+
+    .search {
+      border: none;
+      width: 82%;
+      background-color: inherit;
+      outline: 1px solid red;
+    }
+  }
+
+  .nav_list {
+    margin-left: 30px;
+
+    .nav_link {
+      text-decoration: none;
+      color: #dcdcdc;
+    }
+
+    .nav_link:hover {
+      color: rgb(245, 245, 245);
+    }
+
+    .nav_link:not(:first-child) {
+      margin-left: 20px;
+    }
+  }
+}
+
+.logo {
+  text-align: center;
+  margin-bottom: 30px;
 }
